--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,6 +11,8 @@ jobs:
 
     strategy:
       fail-fast: false
+      matrix:
+        language: [javascript]
      
     # Specify the container in which actions will run
     container:
