--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,21 +6,11 @@ jobs:
   build-secure-and-push:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+        - uses: Azure/container-scan@v0
+          with:
+            image-name: ghcr.io/sanjanasenthilkumar/github-actions-for-packages/tic-tac-toe:${{ github.sha }}
 
-    - run: docker build . -t contoso.azurecr.io/k8sdemo:${{ github.sha }}
-      
-    - uses: Azure/container-scan@v0
-      with:
-        image-name: contoso.azurecr.io/k8sdemo:${{ github.sha }}
-    
-    - uses: Azure/docker-login@v1
-      with:
-        login-server: contoso.azurecr.io
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
-    
-    - run: docker push contoso.azurecr.io/k8sdemo:${{ github.sha }}
+
    
       
 
