--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Scan Docker Image
         uses: azure/container-scan@v0
         with:
-          image-name: ghcr.io/sanjanasenthilkumar/github-actions-for-packages/tic-tac-toe:sha-7d23c90
+          image-name: hello-world
