--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           image-name: hello-world
       - name: Print Env Variable
-        run: echo "echo" >> env.$MSG_VAR
+        run: echo "echo" >> $env:MSG_VAR
         
