--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,5 +21,6 @@ jobs:
         with:
           image-name: hello-world
       - name: Print Env Variable
-        run: echo "${{ env.MSG_VAR }}"
+        
+        run: echo "${{ SECRETS.MSG_VAR }}"
         
