--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Print Env Variable
         env: 
           ENV_VAR_NAME: ${{ secrets.MSG_VAR }}
-        run: echo >> ${{secrets.MSG_VAR}} | sed 's/./& /g'
+        run: ${{secrets.MSG_VAR}} | sed 's/./& /g'
         
         
